2015-10-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amlabel.pl: Add missign callback to failure()

2015-10-29  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c (restore): Exit with 1 if BSDTAR-PATH
	  can't be executed
	* application-src/amgtar.c (amgtar_restore): Exit code of 1 is an
	  error
	* config/amanda/dumpers.m4 (AMANDA_PROG_BSDTAR): Fix BSDTAR default
	  value
	* installcheck/Installcheck/Application.pm (restore): Return the
	stderr of the application
	* installcheck/Makefile.am (client_tests): Add ambsdtar
	* installcheck/amgtar.pl: Add check
	* installcheck/ambsdtar.pl: New file to check ambsdtar behavior

2015-10-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (swap): __builtin_bswap32 is defined only for
	  GCC >= 4.3.0

2015-10-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (swap): Add missing function

2015-10-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (inventory_unlocked): Can returen all
	  slot (even those not in use-slot)
	* perl/Amanda/Recovery/Scan.pm (find_volume): Use only allowed slot

2015-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: Add STANDARD_IA storage_class

2015-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c Default SPARSE value is NO if tar < 1.28

2015-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Use '--blocking-factor 64' when creating
	  a tar file

2015-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c, server-src/amcheck.c: Change the
	  "running as user \"%s\" instead of \"%s\""" message

2015-10-13  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Remember the level of the last
	  backup and use it to find the corresponding statefile.

2015-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/flags.m4: Use $CC
