@@ -1699,15 +1699,19 @@ handle_taper_result(
 		   walltime_str(curclock()), dp->host->hostname, qname);
 	    fflush(stdout);
 
+	    taper->result = cmd;
+	    if (taper->dumper && !dp->dataport_list) {
+		taper->dumper->result = FAILED;
+	    }
+
+
 	    if (strcmp(result_argv[2], "INPUT-ERROR") == 0) {
 		taper->input_error = newstralloc(taper->input_error, result_argv[4]);
-		taper->result = FAILED;
 		amfree(qname);
 		break;
 	    } else if (strcmp(result_argv[2], "INPUT-GOOD") != 0) {
 		taper->tape_error = newstralloc(taper->tape_error,
 					       _("Taper protocol error"));
-		taper->result = FAILED;
 		log_add(L_FAIL, _("%s %s %s %d [%s]"),
 		        dp->host->hostname, qname, sched(dp)->datestamp,
 		        sched(dp)->level, taper->tape_error);
@@ -1718,14 +1722,12 @@ handle_taper_result(
 		strcmp(result_argv[3], "TAPE-CONFIG") == 0) {
 		taper->state &= ~TAPER_STATE_TAPE_STARTED;
 		taper->tape_error = newstralloc(taper->tape_error, result_argv[5]);
-		taper->result = FAILED;
 		amfree(qname);
 		break;
 	    } else if (strcmp(result_argv[3], "TAPE-GOOD") != 0) {
 		taper->state &= ~TAPER_STATE_TAPE_STARTED;
 		taper->tape_error = newstralloc(taper->tape_error,
 					       _("Taper protocol error"));
-		taper->result = FAILED;
 		log_add(L_FAIL, _("%s %s %s %d [%s]"),
 		        dp->host->hostname, qname, sched(dp)->datestamp,
 		        sched(dp)->level, taper->tape_error);
@@ -1734,7 +1736,6 @@ handle_taper_result(
 	    }
 
 	    amfree(qname);
-	    taper->result = cmd;
 
 	    break;
 
